# src/routes/auth.route.ts
@@ -2,7 +2,7 @@ import { Router } from 'express';
 import passport from '../config/passport';
 import { validate } from '../middlewares/validate.middleware';
 import { loginUserSchema, registerUserSchema } from '../validations/auth.validation';
-import { getMe, googleLoginCallback, googleLoginFailed, loginUser, registerUser } from '../controllers/auth.controller';
+import { getMe, googleLoginCallback, googleLoginFailed, loginUser, registerUser, logoutUser } from '../controllers/auth.controller';
 import { verifyJWT } from '../middlewares/auth.middleware';
 
 const router = Router();
@@ -10,6 +10,8 @@ const router = Router();
 router.post('/login', validate(loginUserSchema), loginUser);
 
 router.post('/register', validate(registerUserSchema), registerUser);
+
+router.delete('/logout', verifyJWT, logoutUser);
 
 router.get('/google',
   passport.authenticate('google', {
